hphp/hack/test/typecheck/string_no_nameof.php.exp
ERROR: File "string_no_nameof.php", line 4, characters 10-15:
`nameof` cannot be used with string (Parsing[1002])
