hphp/hack/test/typecheck/string_no_nameof.php
<?hh

function f() : void {
  nameof string;
}
